<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFAB00"
    tools:context=".Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/text"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:onClick="audioPlayer"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#DD2C00"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/audio_player"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:onClick="storeData"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#DD2C00"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/store_data"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:onClick="gpsLocator"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#DD2C00"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/gps_location"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="textEnd"
        android:text="Ninad Deshpande\n TE Shift 2\n Roll No.: 09"
        android:gravity="center_vertical"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        tools:ignore="RtlCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>